--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="container">
       <div class="call">
         <div class="left">
-         <span class="text-tittle color-graytext">App</span>
+         <span class="text-tittle color-graytext">Acessibilidade</span>
          <h2 class="text-md color-gray-2">O Aplicativo é válido</h2>
          <p><strong>Baixe já o aplicativo em nossas redes sociais, Basta escanear o QR Code que está aparecendo em sua tela!</strong></p>
             <div class="info">
