Alteração nas descrições do Site de Dayane Brás

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="call">
         <div class="left">
           <span class="color-graytext text-tittle">Quem é Dayane Brás</span>
-          <h2 class="color-gray-2">Psicóloga</h2>
+          <h2 class="color-gray-2">Psicanalista<
           <p class="color-gray-2">Olá sou Dayane Brás, sou formada em pscologia, estou aqui para lhe ajudar com o que precisar, sou muito paciente, estudei e me formei, para ajudar o próximo</p>
           <button>Whatsapp</button>
         </div>
@@ -174,7 +174,7 @@
     <div class="container bg0">
       <img id="logo0"  src="image/LOGO_FUNDO_NEGRO-removebg.png" alt="">
       <p class="text-pq"> &copy; Copyright 2024 <span class="color-graytext">FRONT</span> All Rights Reserved</p>
-      <p class="text-pq">Tel : (99)9999-9999</p>
+      <p class="text-pq">Tel : 366 310 2286
     </div>
   </footer>
 
