--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
           </div>
           <div class="down">
             <div class="box">
-              <img src="image/vazio.png" alt="imagem dentro da box">
+              <img class="imagenS" src="image/vazio.png" alt="imagem dentro da box">
               <h2 class="color-graytext">E-BOOK 1</h2>
               <p class="text-md">Livro digital</p>
               <p class="text-md">descrição</p>
             </div>
             <div class="box">
-              <img src="image/vazio.png" alt="imagem dentro da box">
+              <img class="imagenS" src="image/vazio.png" alt="imagem dentro da box">
               <h2 class="color-graytext">E-BOOK 2</h2>
               <p class="text-md">Livro digital</p>
               <p class="text-md">descrição</p>
             </div>
             <div class="box">
-              <img src="image/vazio.png" alt="Imagem dentro da box">
+              <img class="imagenS" src="image/vazio.png" alt="Imagem dentro da box">
               <h2 class="color-graytext">E-BOOK 3</h2>
               <p class="text-md">Livro digital</p>
               <p class="text-md">descrição</p>
