--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <div class="container bg0">
       <img id="logo0"  src="image/LOGO_FUNDO_NEGRO-removebg.png" alt="">
       <p class="text-pq"> &copy; Copyright 2024 <span class="color-graytext">FRONT</span> All Rights Reserved</p>
-      <p class="text-pq">Tel : 366 310 2286
+      <p class="text-pq">Tel : 366 310 2286 DDD ?
     </div>
   </footer>
 
